# Rover-21-22

./: CMakeLists.txt  README.md  command.sh  package.xml
arm_module/: README.md
launch/: mapviz.launch  roverManualControl.launch
src/arm_module/scripts/joy_controlled_arm/: joy_controlled_arm.ino
src/arm_module/scripts/msg_controlled_arm/: msg_controlled_arm.ino
src/autonomy_module/: automy.py
src/autonomy_module/delta_coordinates/: delta_coordinates.cpp
src/base_module/: a.out  baseNode.h  base_module.cpp  base_node.h  echoer.h  node.h  publisher.h  subscriber.h  test.cpp
src/board_module/scripts/board_script/: board_script.ino  communication_module.h  constants_module.h  drivers_module.h  minimal_module.h  servos_module.h
src/drivers_module/: ConnectionPins.xlsx  README.md
src/drivers_module/scripts/Arduino/int_controlled_drivers_usb/: README.md  int_controlled_drivers_usb.ino
src/drivers_module/scripts/Arduino/msg_controlled_drivers_usb/: README.md
src/drivers_module/scripts/Arduino/testing/: testing.ino
src/drivers_module/scripts/driverController/: CdriverController._ino  driverController.ino
src/drivers_module/scripts/msg_controlled_drivers_usb/: msg_controlled_drivers_usb.ino
src/drivers_module/scripts/tst/: echoer.cpp  listener.cpp  pub.py  talker.cpp
src/drivers_module/scripts/tst2_/: tst2_.ino
src/installation/: ROS_install.sh  arduinoIde_install.sh  arduinoSerial_install.sh  arduino_install.sh  joy_install.sh  joy_install_OLD.sh  package_install.sh  setup.sh  teensyduino_install.sh
src/mapViz/: docker.sh  mapviz_config.mvc
src/mega2560_module/script/10dof/: 10dof.ino
src/mega2560_module/script/compas_magnetico/: Codigo compas magnetico.docx  compas_magnetico._ino  compas_magnetico.ino
src/mega2560_module/script/driverController/: driverController.ino
src/mega2560_module/script/gpsTesting/: gpsTesting.ino
src/teensy_module/: ConnectionPins.xlsx
src/teensy_module/script/driverController/: CdriverController._ino  code.txt  driverController.ino  ethernet_tcp._ino
src/tst/: pub.py
